<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.assignmenttwo.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ListView
            android:id="@+id/listViewGroups"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/headline"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/holo_blue_light"
            android:visibility="visible" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="17dp"
            android:fontFamily="serif"
            android:text="@string/listOf"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnGroupInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/viewGroupInfo"
            android:layout_below="@+id/listViewGroups"
            android:layout_alignEnd="@+id/listViewGroups"
            android:layout_alignStart="@+id/headline" />

        <TextView
            android:id="@+id/explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overkillExplanation"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_below="@+id/btnGroupInfo"
            android:layout_alignStart="@+id/btnGroupInfo"
            android:layout_alignEnd="@+id/btnGroupInfo" />

        <EditText
            android:id="@+id/editTextGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/explanation"
            android:layout_below="@+id/explanation"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusedByDefault="false"
            android:hint="@string/groupName"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:focusedByDefault="false" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextGroupName"
            android:layout_alignEnd="@+id/headline"
            android:layout_alignTop="@+id/editTextGroupName"
            android:text="@string/create"
            android:textSize="14sp" />

    </RelativeLayout >

</ScrollView>

